[project]
name = "ingredient-analyzer"
version = "0.1.0"
description = "Ingredient Analyzer Agent with RAG capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.72.6",
    "python-dotenv>=1.1.0",
    "streamlit>=1.32.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.2.0",
    "pandas>=2.2.0",
    "langchain>=0.1.9",
    "langchain-community>=0.0.24",
    "langchain-openai>=0.0.5",
    "openai>=1.12.0",
    "vectorize-client>=0.2.1"
]
